--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -15,11 +15,11 @@ dd {
     vertical-align: top;
 }
 
-tr[data-toVote="false"] {
+tr[vacancy-toVote="false"] {
     color: darkslategrey;
 }
 
-tr[data-toVote="true"] {
+tr[vacancy-toVote="true"] {
     color: forestgreen;
 }
 
@@ -30,3 +30,31 @@ header, footer {
     padding: 5px 20px;
     margin: 6px 0;
 }
+
+/*.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; !* Set the fixed height of the footer here *!
+    line-height: 60px; !* Vertically center the text there *!
+    background-color: #f5f5f5;
+}*/
+
+body {
+    margin-bottom: 60px;
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+.fa {
+    cursor: pointer;
+}
+
+tr[data-userEnabled="false"] {
+    opacity: 0.3;
+}
+
+
