--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -20,7 +20,7 @@ tr[vacancy-toVote="false"] {
 }
 
 tr[vacancy-toVote="true"] {
-    color: forestgreen;
+    color: #05ae2a;
 }
 
 header, footer {
