5_39 bug RabotaStrategy UIJoobleStrategy

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -95,3 +95,9 @@ tr[data-userEnabled="false"] {
 .spinner-border{
     visibility: hidden;
 }
+.count{
+    visibility: hidden;
+}
+.count1{
+    visibility: hidden;
+}
