--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -101,3 +101,10 @@ tr[data-userEnabled="false"] {
 .count1{
     visibility: hidden;
 }
+
+input.form-control::placeholder {
+    font-size: 95%;
+    font-style: italic;
+    color: #0397ba;
+    opacity: .4;
+}
