--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -106,3 +106,8 @@ input.form-control::placeholder {
 .uniqueClassName {
     text-align: center;
 }
+
+/*https://stackoverflow.com/a/53855189/548473*/
+#noty_layout__bottomRight {
+    width: 385px !important;
+}
